--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>com.aurora.AuroraSpringbootApplication</mainClass>
+                    <mainClass>top.heyqing.heyblog.HeyBlogApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
